--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_slidable: 0.5.7
+  kumi_popup_window: ^2.0.0-nullsafety
 
 dev_dependencies:
   flutter_test:
