--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   kumi_popup_window: ^2.0.0-nullsafety
   http: ^0.13.1
   permission_handler: ^6.1.1
+  page_transition: "^1.1.7+6"
 
 dev_dependencies:
   flutter_test:
