--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,9 +3,9 @@ buildscript {
         google()
         jcenter()
     }
-
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.0'
+        classpath 'com.google.gms:google-services:4.3.5'
     }
 }
 
