--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,12 @@ dependencies:
   http: ^0.13.1
   permission_handler: ^6.1.1
   page_transition: "^1.1.7+6"
+  firebase_core: ^1.0.1
+  firebase_auth: ^1.0.1
+  google_sign_in: ^5.0.0
+  flutter_signin_button: ^2.0.0
+  cloud_firestore: ^1.0.5
+  animations: ^2.0.0
 
 dev_dependencies:
   flutter_test:
