--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  convex_bottom_bar: ^3.0.0
   fluttertoast: ^7.1.8
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -32,8 +32,9 @@ dependencies:
   kumi_popup_window: ^2.0.0-nullsafety
   http: ^0.13.1
   permission_handler: ^6.1.1
-  page_transition: "^1.1.7+6"
+  page_transition: ^1.1.7+6
   firebase_core: ^1.0.1
+  flutter_easyloading: ^3.0.0
   firebase_auth: ^1.0.1
   google_sign_in: ^5.0.0
   flutter_signin_button: ^2.0.0
