--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,22 +25,21 @@ dependencies:
     sdk: flutter
   convex_bottom_bar: ^3.0.0
   fluttertoast: ^7.1.8
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_slidable: 0.5.7
   kumi_popup_window: ^2.0.0-nullsafety
-  http: ^0.13.1
   permission_handler: ^6.1.1
   page_transition: ^1.1.7+6
-  firebase_core: ^1.0.1
+  firebase_core: ^1.0.4
   flutter_easyloading: ^3.0.0
   firebase_auth: ^1.0.1
+  firebase_storage: ^8.0.4
   google_sign_in: ^5.0.0
   flutter_signin_button: ^2.0.0
   cloud_firestore: ^1.0.5
   animations: ^2.0.0
   timeago: ^3.0.2
+  image_picker: ^0.7.4
 
 dev_dependencies:
   flutter_test:
