--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   animations: ^2.0.0
   timeago: ^3.0.2
   image_picker: ^0.7.4
+  path_provider: ^2.0.1
 
 dev_dependencies:
   flutter_test:
