--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   timeago: ^3.0.2
   image_picker: ^0.7.4
   path_provider: ^2.0.1
+  animated_text_kit: ^4.2.1
 
 dev_dependencies:
   flutter_test:
