--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   image_picker: ^0.7.4
   path_provider: ^2.0.1
   animated_text_kit: ^4.2.1
+  flex_color_scheme: ^2.1.1
 
 dev_dependencies:
   flutter_test:
