--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.0.1
   animated_text_kit: ^4.2.1
   flex_color_scheme: ^2.1.1
+  url_launcher: ^6.0.3
 
 dev_dependencies:
   flutter_test:
