--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   animated_text_kit: ^4.2.1
   flex_color_scheme: ^2.1.1
   url_launcher: ^6.0.3
+  flutter_svg: ^0.22.0
 
 dev_dependencies:
   flutter_test:
