--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   url_launcher: ^6.0.3
   flutter_svg: ^0.22.0
   flutter_swiper: ^1.1.6
+  firebase_messaging: 9.1.4
+  flutter_local_notifications: '>=0.9.0'
+  firebase_analytics: ^8.0.2
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +67,8 @@ flutter:
   assets:
     - images/
     - images/person/
+
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
