--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,7 +46,7 @@ dependencies:
   url_launcher: ^6.0.3
   flutter_svg: ^0.22.0
   flutter_swiper: ^1.1.6
-  firebase_messaging: 9.1.4
+  firebase_messaging: ^10.0.0
   flutter_local_notifications: '>=0.9.0'
   firebase_analytics: ^8.0.2
 
