--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,8 +51,14 @@ dependencies:
   firebase_analytics: ^8.0.2
 
 dev_dependencies:
+  flutter_launcher_icons: "0.9.0"
   flutter_test:
     sdk: flutter
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "images/logo.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
